Fixed hidden menu styles on mobile

--- a/src/aboutStyles.css
+++ b/src/aboutStyles.css
@@ -385,7 +385,7 @@ header hr{
     }
 }
 
-@media screen and (max-width: 780px){
+@media screen and (max-width: 760px){
     .about-hero img{
         width: 100%;
         margin: 32px 50px;
@@ -403,5 +403,19 @@ header hr{
     .third{
         flex: auto;
     
+    }
+
+    /* MAKING MENU RESPONSIVE*/
+    #menu-images{
+        display: none;
+    }
+    .menu-left-content{
+        width: 100%;
+        border-radius: 35px;
+    }
+
+    .menu-left-content ul li a{
+        font-family: "Valverde", sans-serif;
+        font-size: 2em;
     }
 }
